# MANTIS

./: CMakeLists.txt  README.md  sin_cos_gradients.csv  sin_gradients.csv
src/: inputs.cpp  main.cpp
src/lstm/: gate.cpp  gate.h  lstm.cpp  lstm.h
src/util/: circbuf.h  gate.cpp  gate.h  math.cpp  math.h
